// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api 1`] = `
{
  "domains": {
    "nodes": [
      {
        "api": {
          "anonRole": "anonymous",
          "apiModules": {
            "nodes": [],
          },
          "databaseId": "test-database-id",
          "dbname": "test-database-name",
          "isPublic": true,
          "rlsModule": {
            "authenticate": "authenticate",
            "currentRole": "current_user",
            "currentRoleId": "current_user_id",
            "privateSchema": {
              "schemaName": "private_schema",
            },
          },
          "roleName": "authenticated",
          "schemaNames": {
            "nodes": [
              {
                "schemaName": "public_schema",
              },
            ],
          },
          "schemaNamesFromExt": {
            "nodes": [],
          },
        },
      },
    ],
  },
}
`;

exports[`meta 1`] = `
{
  "domains": {
    "nodes": [
      {
        "api": {
          "anonRole": "anonymous",
          "apiModules": {
            "nodes": [],
          },
          "databaseId": "test-database-id",
          "dbname": "test-database-name",
          "isPublic": true,
          "rlsModule": null,
          "roleName": "authenticated",
          "schemaNames": {
            "nodes": [],
          },
          "schemaNamesFromExt": {
            "nodes": [
              {
                "schemaName": "collections_public",
              },
              {
                "schemaName": "meta_public",
              },
            ],
          },
        },
      },
    ],
  },
}
`;

exports[`site 1`] = `
{
  "domains": {
    "nodes": [
      {
        "site": {
          "app": {
            "appImage": null,
            "appStoreLink": null,
            "name": "My App",
            "playStoreLink": null,
          },
          "appleTouchIcon": null,
          "description": "Description goes here",
          "favicon": null,
          "logo": null,
          "ogImage": null,
          "siteModules": {
            "nodes": [],
          },
          "siteThemes": {
            "nodes": [
              {
                "theme": {
                  "primaryColor": "#aeaeae",
                },
              },
            ],
          },
          "title": "Title",
        },
      },
    ],
  },
}
`;
